Ensure only green text is darker
As the darker green is too dark for the icons and status UI.

--- a/src/css/components/status.scss
+++ b/src/css/components/status.scss
@@ -10,7 +10,7 @@
 .status-started,
 .status-running,
 .status-ok {
-  color: $color-ok;
+  color: $color-textok;
 }
 
 .status-stopped,
