--- a/src/css/override_vars.scss
+++ b/src/css/override_vars.scss
@@ -5,7 +5,8 @@ $color-blue:                    #056dd4;
 $color-brightmint:              #00df99;
 $color-cream:                   #f5f5f3;
 $color-gold:                    #f4b400;
-$color-green:                   #438500;
+$color-textgreen:               #438500;
+$color-green:                   #0baf00;
 $color-red:                     #be4900;
 
 $color-trueblack:               #000000;
@@ -38,6 +39,7 @@ $color-warning:                 $color-red;
 $color-error:                   $color-red;
 $color-finish:                  $color-green;
 $color-ok:                      $color-green;
+$color-textok:                  $color-textgreen;
 $color-inactive:                $color-textblack;
 
 $color-visited:                 $color-blue;
